# mobius

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/cli/: actions.rs  alter.rs  mod.rs
src/markdown/: generate.rs  mod.rs  parser.rs
src/models/: deepseek.rs  mod.rs  model.rs
src/session/: config.rs  main_loop.rs  manager.rs  message.rs  mod.rs  theme.rs
